# chat-test

./: .gitignore
chat/: Cargo.toml
chat/client/: Cargo.toml
chat/client/src/client/: client_impl.rs  mod.rs
chat/client/src/client_lib/: client.rs  client_error.rs  mod.rs
chat/netutils/: Cargo.toml
chat/netutils/src/: lib.rs  logger.rs  message_stream.rs  thread_helper.rs
chat/netutils/src/messages/: client.rs  server.rs
chat/server/: Cargo.toml
chat/server/src/server/: client_info.rs  mod.rs  server_impl.rs
chat/server/src/server_lib/: client.rs  mod.rs  server_error.rs
chat/utils/: Cargo.toml
chat/utils/src/: io.rs
