[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client_lib"
path = "src/client_lib/mod.rs"

[[bin]]
name = "client"
path = "src/client/mod.rs"

[dependencies]
netutils = { path = "../netutils" }
utils = { path = "../utils" }