[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server_lib"
path = "src/server_lib/mod.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[dependencies]
netutils = { path = "../netutils" }
utils = { path = "../utils" }